# filever

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
files/: fver  fver.py
src/filever/: loadfile.py
